Fixed vertical align, added categories to the drop-down game information

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,6 @@
     padding: 0 0.5em;
 }
 
-.task_header {
+.game_header {
     margin: 5px;
 }
